# kgit2

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  leaks_report.txt  linux.txt  linuxX64.def  mac.txt  settings.gradle.kts
annotations/: build.gradle.kts
buildSrc/: build.gradle.kts
builder/: .gitignore  Cargo.toml  temp.txt
builder/src/: lib.rs  main.rs  path_data.rs
builder/src/commands/: git_command.rs  ssh_command.rs  ssl_command.rs
builder/src/options/: base_options.rs  clean_options.rs  git_options.rs  path_options.rs  ssh_options.rs  ssl_options.rs
core/: build.gradle.kts
core/src/nativeMain/kotlin/: Main.kt
docker/: docker-compose.yml  docker-compose.yml.bk
docker/base/: Dockerfile
docker/git-nginx/: 10-fastcgi-wrap.sh  Dockerfile  git.conf
docker/kgit2/: .zshrc  Dockerfile
generator/: .gitignore  Cargo.toml  build.rs
kbuilder/: Cargo.toml  rustfmt.toml
kbuilder/src/: commands.rs  log.rs  options.rs  path_data.rs  process_command_extend.rs  tools.rs
kbuilder/src/commands/: git_command.rs  ssh_command.rs
kbuilder/src/options/: base_options.rs
ksp/: build.gradle.kts
ksp/src/main/kotlin/: ProcessorProvider.kt
lib/: .gitignore  build.gradle.kts  gradle.properties  libcurl.def  libdemo.def  libgit2.def  settings.gradle.kts
lib/demo/: demo.h
lib/tests/: .gitignore  CMakeLists.txt  input  main.c
libs/linuxArm64/: libgit2.def
libs/linuxX64/: libgit2.def  toolchain.cmake  toolchain.sh
libs/linuxX64/openssl/: lib
libs/macosArm64/: libgit2.def
libs/mingwX64/openssl/: lib
native/: CMakeLists.txt  build.gradle.kts  native.c  native.h
native/install/include/: native.h
rename/: Cargo.toml
rename/src/: main.rs
rename/tree-sitter-kotlin/: package-lock.json  pnpm-lock.yaml
src/nativeInterop/cinterop/: linuxX64.def  macosArm64.def  macosX64.def
src/nativeMain/kotlin/: CloneSample.kt  GitRepository.kt  Main.kt  TempConfig.kt  main.kt
tools/: build_libgit2.sh  build_libssh2.sh  build_openssl.sh  generate_def.sh  run_tests.sh
(+514 files in other folders)
