[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
regex = "1.7.0"
convert_case = "0.6.0"
colored = "2.0.0"
tokio = { version = "1.22.0", features = ["full"] }
tree-sitter = "0.20.9"

[build-dependencies]
cc = "*"
